sumo/tests/jtrrouter/errors/network/edge/root__edge#id__false1/errors.jtrrouter
Error: An unknown edge occured (id='1').
Quitting (on error).
